--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,15 @@
 <style> /* set the CSS */
 
 .bar { fill: #ffc107; }
-
+div.tooltip {
+  position: absolute;
+  padding: 8px;
+  font: 14px sans-serif;
+  background: #eeeeee;
+  color: black;
+  border: 1px;
+  border-radius: 8px;
+}
 
 </style>
 <body>
